// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatusBadge Barre 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md line-through text-yellow-800 bg-yellow-100"
>
  Non renseigné
</span>
`;

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatusBadge Detaille 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-gray-600 bg-pink-100"
>
  Détaillé
</span>
`;

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatusBadge Fait 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-green-700 bg-green-200"
>
  Fait
</span>
`;

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatusBadge Non Renseigne 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-yellow-800 bg-yellow-100"
>
  Non renseigné
</span>
`;

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatusBadge Pas Fait 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-red-600 bg-pink-100"
>
  Pas fait
</span>
`;

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatusBadge Programme 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-blue-600 bg-blue-100"
>
  Programmé
</span>
`;
